karlserve package Changelog
===========================

1.20 (2012-11-21)
-----------------

- KarlServe scripts now using logging module to log exceptions. (LP #1067453)

- RedisLog handler now emits warnings if it can't find the current Karl instance
  for purposes of logging. (LP #1067453)

1.19 (2012-11-20)
-----------------

- Silently ignore karlserve script entry points that generate ImportError.

1.18 (2012-10-17)
-----------------

- Corrected argparse dependency (fixes Python 2.7 builds)

- lp.1063834: Allow a pgtextindex.maxlen setting.

1.17 (2012-08-30)
-----------------

- Refactor to no longer require repoze.who.

- Complain if doctotext is not available.

- Don't configure postoffice_zodburi if no postoffice configuration provided.

- Refactor to no longer use repoze.tm2, repoze.zodbconn and repoze.retry
  middlewares.  Pyramid compatible alternatives are used instead.

1.16 (2012-05-30)
-----------------

- Use redislog for logging. (2012-05-30)

1.15 (2012-04-14)
-----------------

- Fix postoffice database configuration for RelStorage.

1.14 (2012-05-10)
-----------------

- The error page filter is no longer configured as it has been removed from
  Karl. (LP #955307)

- The postoffice database can now be accessed using ZODB's multi-database
  support. (LP #985546)

1.13 (2012-04-19)
-----------------

- repoze.who is now configured to use the basic challenger instead of the
  redirform challenger.

- Suppress warning in Pyramid > 1.1 about repoze.zodbconn using the request as
  a dict.


1.12 (2012-01-04)
-----------------

- IntegrityError is a retryable error. See lp:906958

1.11 (2011-12-29)
-----------------

- Refactoring to support UX2.

1.10 (2011-12-01)
-----------------

- Added configuration option, zodb.cache_size.

- Added configuration option, zodb.pool_size.

1.9 (2011-10-27)
----------------

- Pyramid updates

1.8 (2011-09-29)
----------------

- Added parse_dsn utility function.

1.7 (2011-08-25)
----------------
