@@ -1,6 +1,11 @@
 karlserve package Changelog
 ===========================
 
+Unreleased
+----------
+
+- Added '--retry' option to karlserve console script.
+
 1.20 (2012-11-21)
 -----------------
 
